--- a/codebase/composer.json
+++ b/codebase/composer.json
@@ -22,6 +22,8 @@
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1",
         "drupal/eck": "dev-1.x",
+        "drupal/group": "^1.3",
+        "drupal/node_view_permissions": "^1.4",
         "drupal/social_auth_google": "^3.0.0-rc1",
         "drupal/webform": "^6.0"
     },
