--- a/codebase/package.json
+++ b/codebase/package.json
@@ -34,6 +34,7 @@
     "bootstrap": "^4.6.0",
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "^2.3.0",
+    "css-loader": "^5.2.4",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -51,10 +52,16 @@
     "gulp-shell": "^0.7.1",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
+    "json-query": "^2.2.2",
     "node-gyp": "^8.0.0",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
+    "react-select": "^4.3.1",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "styled-components": "^5.2.3",
     "typescript": "^4.2.4",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
