--- a/codebase/package.json
+++ b/codebase/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/reapbooster/docker4drupal#readme",
   "dependencies": {
+    "@babel/core": "^7.14.3",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
@@ -61,10 +62,12 @@
     "react-select": "^4.3.1",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
-    "styled-components": "^5.2.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
     "webpack": "^5.35.1",
-    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.7.0"
   }
 }
